# Higher-Lambda-Calculus

./: AbstractSyntax.hs  Exp.cf  Main.hs  PrettyPrinting.hs  README.markdown  README.md  RawSyntax.hs  Test.hs  TypeChecker.hs  higherlc.cabal
Examples/: Bool.hlc  Functions.hlc  Functors.hlc  Id.hlc  IdU.hlc  Int.hlc  Nat.hlc  Prod.hlc  Tests.hlc  Unit.hlc  Universe.hlc  iuni.hlc
