name:                higerlc
version:             2.0
synopsis:            A prototype for a kind of higher-dimensional lambda calculus.
description:         A prototype for a kind of higher-dimensional lambda calculus.
author:              Anthony Hart
maintainer:
-- copyright:
category:            Language
build-type:          Custom
extra-source-files:  Makefile, README.md, Exp.cf, examples/*.hlc
cabal-version:       >=1.10

executable higerlc
  main-is:             Main.hs
  other-modules:
    PrettyPrinting,
    TypeChecker,
    AbstractSyntax,
    RawSyntax,
    Exp.Abs,
    Exp.ErrM,
    Exp.Layout,
    Exp.Lex,
    Exp.Par,
    Exp.Print,
    Exp.Skel,
    Exp.Test
  other-extensions:
    LambdaCase
  build-depends:
    base,
    unordered-containers,
    array,
    transformers,
    mtl,
    containers
  -- hs-source-dirs:
  build-tools:         alex, happy, bnfc
  default-language:    Haskell2010